updated composer-char-counter.js fixed misunderstanding >= now >, add maxCharLength as a constant for readability. header.css changed to use a newly made id for the header with a users photo and name. index.html now has temporary content, classes/ids have yet to be defined

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+#user-info {
   height: 400px;
   width: 100vw;
   font-family: 'Source Sans Pro', sans-serif;
